styles.css
/* ... */
@media (max-width: 991px) {
  body {
    text-align: center;
    z-index: -2;
  }
  /* 
  body.active {
    overflow-y: hidden;
  } */

  nav {
    background: #000;
    text-align: center;
    height: 70px;
    margin: 0px;
    z-index: 1;
  }
  /* 
  nav.active {
    z-index: -1;
  } */

  ul {
    padding-top: 0px;
    position: fixed;
    width: 100%;
    height: 100%;
    background-color: rgb(0, 0, 0);
    bottom: -100%;
    text-align: center;
    transition: 0.8s;
    z-index: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
  }

  ul.active {
    bottom: 0;
  }

  nav ul li {
    margin: 20px 0px;
    padding: 20px 0px;
    line-height: 12px;
    display: block;
  }

  nav ul li a {
    color: white;
    font-size: 17px;
  }

  nav ul li a:hover {
    color: #5f7e45;
    background: none;
  }

  .checkbtn {
    font-size: 25px;
    color: #fff;
    cursor: pointer;
    line-height: 70px;
    display: block;
    z-index: 1;
    margin: none;
    /* top: 70px; */
  }

  .checkbtn:hover {
    color: none;
  }

  ul.active .checkbtn {
    height: 70px;
    /* background: red; */
    position: absolute;
    top: 0;
    width: 100%;
  }

  .socials {
    padding: 90px 0px 0px 0px;
    color: #fff;
    display: inline-block;
  }

  .socials i {
    font-size: 20px;
    padding: 0 20px;
    cursor: pointer;
    color: rgb(63, 63, 63);
  }

  .socials i:hover {
    color: #b2c5b2;
    transition: cubic-bezier(0.68, -0.55, 0.265, 1.55);
  }

  .socials a {
    color: white;
  }

  header {
    height: 100vh;
    width: 100%;
    background: #000;
  }

  .header-text {
    padding: auto;
    margin: auto;
    z-index: auto;
    width: 100%;
  }

  header h1 {
    font-size: 36px;
    padding: 0px;
    color: white;
  }

  header p {
    font-size: 20px;
    padding: 0px;
    color: rgb(233, 233, 233);
    font-family: "Quicksand", sans-serif;
    font-weight: 600;
  }

  .dot {
    font-size: 40px;
    color: #6b8e4e;
  }

  .header-text i {
    color: #fff;
    font-size: 17px;
  }

  /* ABOUT ME */

  #About {
    /* height: auto; */
    margin: 50px;
    background: rgb(0, 0, 0, 0.8);
    padding-bottom: 0px;
  }

  #About h1 {
    padding-top: 30px;
    font-size: 40px;
    text-align: center;
    color: white;
    font-family: "Poppins", sans-serif;
  }

  .about-div {
    height: fit-content;
    margin: 30px auto 70px auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .about-img-div {
    width: 50%;
    height: 450px;
    margin-bottom: 50px;
  }

  .about-img-div img {
    height: 450px;
    margin: 0px auto;
    display: grid;
    place-items: center;
  }
  .about-note {
    /* background: rgba(255, 255, 255, 0.05); */
    margin: auto;
    width: 90%;
    float: none;
    height: auto;
    text-align: left;
    padding: 30px 0px 30px 30px;
    color: white;
  }

  .about-note h3 {
    color: #6b8e4e;
    font-family: "Poppins", sans-serif;
    font-weight: 500;
    font-size: 25px;
    padding-bottom: 20px;
  }

  .about-note-p {
    font-family: "Quicksand", sans-serif;
    padding-bottom: 20px;
  }

  .arrow-up.active {
    z-index: 0;
  }

  /* Services */

  #Services h1 {
    padding: 0px 0px;
    font-size: 45px;
    text-align: center;
    color: white;
    font-weight: 600;
    font-family: "Poppins", sans-serif;
  }

  .service {
    width: 90%;
    margin: auto;
    padding: 80px 0px 30px 0px;
    /* background-color: #000; */
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
    flex-wrap: wrap;
  }

  .box {
    width: 40%;
    height: 335px;
    background-color: #000;
    color: white;
    padding: 0px 20px;
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    margin: 20px;
  }

  /* CONTACT */

  #Contact {
    width: 100%;
    height: fit-content;
    background: #000;
  }

  #Contact h1 {
    padding: 0px;
    font-size: 45px;
    text-align: center;
    color: white;
    font-family: "Poppins", sans-serif;
  }

  .extra-contact {
    display: block;
    width: 100%;
    height: fit-content;
    padding: 10px 30px;
    margin: 80px 0px 0px 0px;
    background: none;
  }

  .left-div {
    height: fit-content;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
    margin-bottom: 20px;
  }

  .right-div {
    height: fit-content;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
  }

  .container {
    width: 43%;
    height: 130px;
    background: rgba(255, 255, 255, 0.07);
    color: white;
    padding: 0px 0px 0px 30px;
    margin: 0px 10px;
    display: flex;
    flex-direction: row;
    /* justify-content: center; */
    align-items: center;
  }

  .submit-btn {
    width: 30%;
    height: 50px;
    background: #5f7e45;
    color: white;
    border: none;
    margin-top: 15px;
    padding: 0px 0px;
    font-family: "Poppins", sans-serif;
    font-size: 16px;
  }

  .icon {
    margin-right: 30px;
  }

  .info {
    text-align: left;
  }

  .extra-contact .fa-github:hover {
    color: #6b8e4e;
  }

  .extra-contact .fa-instagram:hover {
    color: #bc2a8d;
  }

  .extra-contact .fa-twitter:hover {
    color: #1da1f2;
  }

  .extra-contact .fa-linkedin-in:hover {
    color: #0077b5;
  }

  /* FOOTER */
  footer {
    text-align: center;
    height: 150px;
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    /* background-color: #6b8e4e; */
    background: rgba(255, 255, 255, 0.04);
  }

  footer h4 {
    font-family: "poppins", sans-serif;
    padding: 0px;
    margin: 0px;
    color: white;
    width: 50%;
  }

  footer div {
    width: 50%;
    text-align: center;
  }

  footer .info {
    width: 100%;
    margin: 0;
    text-align: center;
  }
}
/* ... */

